cmake_minimum_required(VERSION 3.23)

project(Sword_to_Offer)

set(CMAKE_CXX_STANDARD 11)




add_executable(interview_question_1 Unit_2/interview_question_1.cpp)
add_executable(interview_question_2 Unit_2/interview_question_2.cpp)
add_executable(20 labuladong/labuladong_question_list_leetcode/20.cpp)
add_executable(interview_question_3 Unit_2/interview_question_3.cpp)