cmake_minimum_required(VERSION 3.23)

project(Sword_to_Offer)

set(CMAKE_CXX_STANDARD 11)




add_executable(interview_question_1 Unit_2/interview_question_1.cpp)
add_executable(interview_question_2 Unit_2/interview_question_2.cpp)
add_executable(20 labuladong/labuladong_question_list_leetcode/20.cpp)
add_executable(interview_question_3 Unit_2/interview_question_3.cpp)
add_executable(interview_question_3_2 Unit_2/interview_question_3_2.cpp)
add_executable(interview_question_4 Unit_2/interview_question_4.cpp)
add_executable(interview_question_5 Unit_2/interview_question_5.cpp)
add_executable(21 labuladong/labuladong_question_list_leetcode/21.cpp)
add_executable(interview_question_6 Unit_2/interview_question_6.cpp)
add_executable(interview_question_7 Unit_2/interview_question_7.cpp)
add_executable(interview_question_8 Unit_2/interview_question_8.cpp)
add_executable(interview_question_9 Unit_2/interview_question_9.cpp)

add_executable(interview_question_10 Unit_2/interview_question_10.cpp)
add_executable(interview_question_11 Unit_2/interview_question_11.cpp)
add_executable(interview_question_12 Unit_2/interview_question_12.cpp)
add_executable(interview_question_13 Unit_2/interview_question_13.cpp)